UV Editor: UV Context Menu(W key) Auto does nothing #58663

Closed
opened 2018-12-03 23:24:42 +01:00 by JohnnyDeezWax · 7 comments

Operating system: Windows 10
Graphics card: NVidia 1060

Broken: 2.80, de36a2f99b, 2018-11-13

When using the UV editor, select more than one vertex and press W key. Align menu items do nothing.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

Operating system: Windows 10 Graphics card: NVidia 1060 Broken: 2.80, de36a2f99b3, 2018-11-13 When using the UV editor, select more than one vertex and press W key. Align menu items do nothing. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @DZWX

Added subscriber: @DZWX

Added subscriber: @ZedDB

Added subscriber: @ZedDB

This seem to work for me with a build from today. Align X/Y seems to work nicely. Can you try a newer build and report on your results?

This seem to work for me with a build from today. Align X/Y seems to work nicely. Can you try a newer build and report on your results?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-06 12:52:49 +01:00
Member

Well, if this is specifically about Align Auto (and not the other align options) I can confirm it does nothing.

Checking...

Well, if this is specifically about `Align Auto` (and not the other align options) I can confirm it does nothing. Checking...

This issue was referenced by 32d50858c3

This issue was referenced by 32d50858c353734124f68fd71b66f46ed2cb2ceb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58663
No description provided.