Fix T58663: UV Align Auto does nothing

one case was missing in cleanup commit rB8fc6609cc008